<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Developer Bio"
            android:gravity="center"
            android:textColor="#7C4DFF"
            android:fontFamily="cursive"
            android:id="@+id/text1ID"
            android:layout_marginBottom="10dp"
            android:textSize="60dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="MD.RAMIM HOSSAIN"
            android:textColor="#0E0D0D"
            android:gravity="center"
            android:id="@+id/text2ID"
            android:textSize="25dp"/>


        <TextView
            android:layout_marginTop="15dp"

            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:id="@+id/text3ID"

            android:layout_marginBottom="20dp"
            android:textColor="#26e50f"
            android:text="@string/about1"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Developer contact"
            android:gravity="center"
            android:textColor="#7C4DFF"
            android:id="@+id/text4ID"
            android:fontFamily="cursive"
            android:layout_marginBottom="10dp"
            android:textSize="45dp"/>


        <TextView

            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textStyle="bold"
            android:id="@+id/text5ID"
            android:layout_gravity="center"
            android:textColor="#0f8ae5"
            android:autoLink="email"
            android:text="@string/about2" />

        <TextView

            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textStyle="bold"
            android:id="@+id/text6ID"
            android:layout_gravity="center"
            android:textColor="#0f8ae5"
            android:autoLink="phone"
            android:text="@string/about3" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#7C4DFF"
            android:text="Single paint Of Access"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="cursive"
            android:id="@+id/text17ID"
            android:textSize="30dp"
            android:layout_marginTop="15dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#070C00"
            android:text="1.0.1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20dp"
            android:id="@+id/text8ID"
            android:layout_marginTop="15dp"/>

    </LinearLayout>


</ScrollView>